--- a/Airnote/Experience.rcproject/com.apple.RCFoundation.Project
+++ b/Airnote/Experience.rcproject/com.apple.RCFoundation.Project
@@ -96,7 +96,7 @@
                 0
               ],
               "identifier" : "DB8A4C35-7FFD-4125-AB6A-A5479E1FEADB",
-              "material" : "concrete",
+              "material" : "ice",
               "overrides" : {
                 "children" : {
                   "08C0F541-18AA-4814-B8EB-2086EF18D8D1" : null,
@@ -199,10 +199,29 @@
                           }
                         ],
                         [
+                          "rigidBody-material",
+                          {
+                            "typeName" : "RigidBodyMaterial",
+                            "value" : {
+                              "builtIn" : "concrete",
+                              "overrides" : {
+
+                              }
+                            }
+                          }
+                        ],
+                        [
                           "rigidBody-motionType",
                           {
                             "typeName" : "REMotionType",
                             "value" : "static"
+                          }
+                        ],
+                        [
+                          "rigidBody-shapeType",
+                          {
+                            "typeName" : "String",
+                            "value" : "default"
                           }
                         ]
                       ]
@@ -244,21 +263,21 @@
               "title" : "Green",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.99998974800109863,
+                  0.8683772087097168,
                   2.3283062977608182e-10,
-                  0.0045157726854085922,
+                  -0.4959043562412262,
                   0,
-                  0.0021387836895883083,
-                  0.8807263970375061,
-                  -0.47362038493156433,
+                  -0.23487283289432526,
+                  0.88072651624679565,
+                  -0.411285400390625,
                   0,
-                  -0.0039771609008312225,
+                  0.43675604462623596,
                   0.47362521290779114,
-                  0.88071745634078979,
+                  0.76480275392532349,
                   0,
-                  0.12442857772111893,
-                  0.20357674360275269,
-                  0.32473337650299072,
+                  0.30327829718589783,
+                  0.28302055597305298,
+                  0.39887183904647827,
                   1
                 ],
                 "sceneTransform" : [
